--- a/404.html
+++ b/404.html
@@ -12,6 +12,7 @@
             <!-- Latest compiled JavaScript -->
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         
+            <link rel="shortcut icon" type="image/x-icon" href="./graphismes/icones/logo/logo-01-ico.png">
         
             <link href="https://fonts.googleapis.com/css2?family=Cagliostro&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;600;700;900&display=swap" rel="stylesheet">
