--- a/meduse.html
+++ b/meduse.html
@@ -14,6 +14,8 @@
 <title>meduse</title>
 <!-- write your code here -->
 <link rel="stylesheet" href="/public/css/style.css">
+	
+<link rel="shortcut icon" type="image/x-icon" href="./graphismes/icones/logo/logo-01-ico.png">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
