--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;600;700;900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="/public/css/style.css">
+        <link id="cssSheet" rel="stylesheet" href="/public/css/style_night.css">
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap" rel="stylesheet">
 
         <script src="projet.js"></script>
+
+        <script src="nightAndDay.js"></script>
 
     <title>Catherine Jouret • Infographiste • Illustratrice • WebDesigneur</title>
 
@@ -44,6 +46,11 @@
                     <option value="en" class="english"> EN </option>
                 </select>
             </li>
+            <li>
+                <label class="switch">
+                <input type="checkbox" class="checkbox" />
+                <div class=""></div>
+              </label></li>
         </ul>
     </nav>
 
@@ -218,7 +225,7 @@
     </section>
     
     <footer>
-        <p>©2021 Catherine Jouret - <a href="faq.html" target="_blank">FAQ</a> </p>
+        <p>©2021 Catherine Jouret - <a href="faq.html">FAQ</a> </p>
     </footer>
 </body>
 </html>
