--- a/meduse.html
+++ b/meduse.html
@@ -13,9 +13,9 @@
 <meta name="authoring-tool" content="Adobe_Animate_CC">
 <title>meduse</title>
 <!-- write your code here -->
-<link rel="stylesheet" href="/public/css/style.css">
-	
-<link rel="shortcut icon" type="image/x-icon" href="./graphismes/icones/logo/logo-01-ico.png">
+<link id="cssSheet" rel="stylesheet" href="/public/css/style_night.css">
+
+<script src="nightAndDay.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
