--- a/faq.html
+++ b/faq.html
@@ -26,6 +26,16 @@
         <script src="projet.js"></script>
 
         <script src="nightAndDay.js"></script>
+    
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V67GG1GBF3"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-V67GG1GBF3');
+        </script>
 
     <title>Catherine Jouret • Foire aux questions</title>
 
