--- a/realisation.html
+++ b/realisation.html
@@ -28,6 +28,16 @@
         <script src="realPage.js"></script>
 
         <script src="nightAndDay.js"></script>
+    
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V67GG1GBF3"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-V67GG1GBF3');
+        </script>
 
         <title>Catherine Jouret • Réalisations Infographiques • Travaux</title>
 
