--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </p>
             <a href="#contact"><button>Contactez-moi</button></a>
         </div>
-        <div class="tarifs__entreprises">
+<!--         <div class="tarifs__entreprises">
             <h3>entreprises</h3>
             <p>Vous recherchez un nouveau collaborateur sur du plus ou moins long terme? <br>
             Je suis disponible pour vos missions graphiques, en freelance grâce à <a href="https://amplo.be/fr?gclid=CjwKCAiA65iBBhB-EiwAW253Wz-fuuSUCynh2_kpcZTL-e6aVueALuZ7ZcKxoLf9IiiLpr8QFPXC4RoCYSgQAvD_BwE" target="_blank">Amplo</a>, en CDD ou en CDI. <br>
@@ -190,7 +190,7 @@
             <a href="https://emploi.wallonie.be/home/aides-a-lemploi/APE.html#:~:text=Les%20Aides%20%C3%A0%20la%20Promotion,partiellement%20la%20r%C3%A9mun%C3%A9ration%20de%20travailleurs." target="_blank">En savoir plus</a>
                 </p>
                 <a href="#contact"><button>Contactez-moi</button></a>
-         </div> 
+         </div>  -->
         </div>
     </section>
 
