--- a/index.html
+++ b/index.html
@@ -175,22 +175,23 @@
             </p>
             <a href="#contact"><button>Contactez-moi</button></a>
         </div>
-<!--         <div class="tarifs__entreprises">
+        <div class="tarifs__entreprises">
             <h3>entreprises</h3>
-            <p>Vous recherchez un nouveau collaborateur sur du plus ou moins long terme? <br>
+            <p>Je travaille actuellement au SeGEC </p>
+<!--             <p>Vous recherchez un nouveau collaborateur sur du plus ou moins long terme? <br>
             Je suis disponible pour vos missions graphiques, en freelance grâce à <a href="https://amplo.be/fr?gclid=CjwKCAiA65iBBhB-EiwAW253Wz-fuuSUCynh2_kpcZTL-e6aVueALuZ7ZcKxoLf9IiiLpr8QFPXC4RoCYSgQAvD_BwE" target="_blank">Amplo</a>, en CDD ou en CDI. <br>
             Découvrez les avantages à m’engager dès maintenant!
-            </p>
-            <p class="tarifs__entreprises__impulsion">IMPULSION 12+</p>
+            </p> -->
+<!--             <p class="tarifs__entreprises__impulsion">IMPULSION 12+</p>
             <p class="tarifs__entreprises__impulsion__p">Il s’agit d’une allocation de travail, pour une durée de 2 ans maximum, à partir de l’entrée en service. En tant qu’employeur, vous pouvez déduire cette allocation de mon salaire net. <br>
-            <a href="https://www.leforem.be/entreprises/aides-emploi-impulsion-12-mois-plus.html" target="_blank">En savoir plus</a> </p>
+            <a href="https://www.leforem.be/entreprises/aides-emploi-impulsion-12-mois-plus.html" target="_blank">En savoir plus</a> </p> -->
             <p class="tarifs__entreprises__ape">PASSEPORT APE</p>
             <p class="tarifs__entreprises__ape__p">Les aides à la promotion de l’emploi sont des subsides octroyés aux employeurs du secteur non-marchant situés en Wallonie et qui engagent. <br>
                 Bénéficiez d’un subside APE sous forme de points, ainsi que d’une diminution des cotisations sociales. <br>
             <a href="https://emploi.wallonie.be/home/aides-a-lemploi/APE.html#:~:text=Les%20Aides%20%C3%A0%20la%20Promotion,partiellement%20la%20r%C3%A9mun%C3%A9ration%20de%20travailleurs." target="_blank">En savoir plus</a>
                 </p>
                 <a href="#contact"><button>Contactez-moi</button></a>
-         </div>  -->
+         </div> 
         </div>
     </section>
 
